[package]
name = "retinex"
version = "0.1.0"
edition = "2024"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
description = "Single-scale and multi-scale Retinex image enhancement with color restoration (MSRCR)"
keywords = ["image", "enhancement", "retinex", "msrcr", "computer-vision", "photography"]
categories = ["multimedia::images", "computer-vision", "command-line-utilities"]
repository = "https://github.com/sunsided/retinex-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/sunsided/retinex-rs"
documentation = "https://docs.rs/retinex"

[[bin]]
name = "retinex"
path = "src/main.rs"

[lib]
name = "retinex"
path = "src/lib.rs"

[dependencies]
image = "0.24"
imageproc = "0.23"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
# Testing uses images/house.jpg as test data
